# chatgpt_qt_qml

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.FzNiNP  GptResponseParseHelper.cpp  GptResponseParseHelper.h  Loading.qml  MsgList.qml  PostData.cpp  PostData.h  README.md  SkinColor.qml  a.drawio  gen_qm.bat  gen_ts.bat  main.cpp  main.qml  openAIAPI.cpp  openAIAPI.h  package.iss  package.json
include/: PostData.h
qml/: Loading.qml  MsgContent.qml
resource/: res.qrc
src/: GptResponseParseHelper.cpp  PostData.cpp  main.cpp  openAIAPI.cpp
tools/: lang_zh.qm  lang_zh.ts
